[gd_scene load_steps=7 format=1]

[ext_resource path="res://Script/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://GUI/WindowStyleBox.tres" type="StyleBox" id=2]
[ext_resource path="res://GUI/GUITheme.tres" type="Theme" id=3]
[ext_resource path="res://Font/HighScore.tres" type="DynamicFont" id=4]
[ext_resource path="res://Texture/Gui/Title.png" type="Texture" id=5]
[ext_resource path="res://Texture/Background/Space.png" type="Texture" id=6]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 25
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="MainMenu" type="Panel" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1060.0
margin/bottom = 145.0
custom_styles/panel = ExtResource( 2 )

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 320.0
margin/top = 170.0
margin/right = 740.0
margin/bottom = 255.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "START"
flat = false

[node name="ShipSelectorButton" type="Button" parent="CanvasLayer/MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 320.0
margin/top = 280.0
margin/right = 740.0
margin/bottom = 365.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SELECT SHIP"
flat = false

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 320.0
margin/top = 387.0
margin/right = 740.0
margin/bottom = 472.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="TitleText" type="TextureFrame" parent="CanvasLayer/MainMenu"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 4.0
margin/right = 1059.0
margin/bottom = 150.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Space" type="Sprite" parent="."]

transform/pos = Vector2( 518.02, 134.901 )
texture = ExtResource( 6 )
region = true
region_rect = Rect2( 0, 0, 4096, 4096 )
__meta__ = {
"_edit_lock_": true
}


